--- a/TUBES_PBO2/src/View/sample.fxml
+++ b/TUBES_PBO2/src/View/sample.fxml
@@ -43,10 +43,10 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="2">
          <children>
-            <TextArea maxWidth="1.7976931348623157E308" prefHeight="214.0" prefWidth="852.0" />
+            <TextArea fx:id="textHistory" maxWidth="1.7976931348623157E308" prefHeight="214.0" prefWidth="852.0" />
          </children>
       </HBox>
-      <GridPane  prefHeight="157.0" prefWidth="331.0" style="-fx-border-color: black; -fx-border-radius: 10;" GridPane.rowIndex="1">
+      <GridPane prefHeight="157.0" prefWidth="331.0" style="-fx-border-color: black; -fx-border-radius: 10;" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -68,20 +68,20 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Label>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAction1" prefHeight="25.0" prefWidth="122.0" stylesheets="@../styling/fullpackstyling.css" text="Combo" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAttack1" prefHeight="25.0" prefWidth="122.0" stylesheets="@../styling/fullpackstyling.css" text="Combo" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
             <Label fx:id="lblHp1" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ComboBox fx:id="cmbMonster1" onAction="#cmbMonster1" prefWidth="150.0" GridPane.columnIndex="1" />
+            <ComboBox fx:id="comboMonster1" onAction="#cmbMonster1" prefWidth="150.0" GridPane.columnIndex="1" />
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#fightAction1" prefHeight="25.0" prefWidth="122.0" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2" />
          </children>
          <GridPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </GridPane.margin>
       </GridPane>
-      <GridPane  prefHeight="164.0" prefWidth="261.0" style="-fx-border-color: black; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <GridPane prefHeight="164.0" prefWidth="261.0" style="-fx-border-color: black; -fx-border-radius: 10;" GridPane.columnIndex="1" GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -103,13 +103,13 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Label>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAction2" style="-fx-border-radius: 10;" stylesheets="@../styling/fullpackstyling.css" text="Combo " GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAttack2" style="-fx-border-radius: 10;" stylesheets="@../styling/fullpackstyling.css" text="Combo " GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
             <Label fx:id="lblHp2" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ComboBox fx:id="cmbMonster2" onAction="#cmbMonster2" prefWidth="150.0" GridPane.columnIndex="1" />
+            <ComboBox fx:id="comboMonster2" onAction="#cmbMonster2" prefWidth="150.0" GridPane.columnIndex="1" />
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#fightAction2" style="-fx-border-radius: 10;" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2" />
          </children>
          <GridPane.margin>
@@ -148,13 +148,13 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Label>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAction3" prefHeight="25.0" prefWidth="122.0" stylesheets="@../styling/fullpackstyling.css" text="Combo" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAttack3" prefHeight="25.0" prefWidth="122.0" stylesheets="@../styling/fullpackstyling.css" text="Combo" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
             <Label fx:id="lblHp3" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ComboBox fx:id="cmbMonster3" onAction="#cmbMonster3" prefWidth="150.0" GridPane.columnIndex="1" />
+            <ComboBox fx:id="comboMonster3" onAction="#cmbMonster3" prefWidth="150.0" GridPane.columnIndex="1" />
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#fightAction3" prefHeight="25.0" prefWidth="122.0" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2" />
          </children>
          <GridPane.margin>
