--- a/TUBES_PBO2/src/View/sample.fxml
+++ b/TUBES_PBO2/src/View/sample.fxml
@@ -71,7 +71,7 @@
             </Label>
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAttack1" style="-fx-border-radius: 10;" stylesheets="@../styling/fullpackstyling.css" text="Combo" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
             <Label fx:id="lblHp1" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -99,14 +99,14 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Label>
-            <Label text="Hit Point" GridPane.rowIndex="1">
+            <Label text="Hit Point :" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </Label>
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAttack2" style="-fx-border-radius: 10;" stylesheets="@../styling/fullpackstyling.css" text="Combo " GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
             <Label fx:id="lblHp2" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -151,7 +151,7 @@
             </Label>
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#comboAttack3" prefHeight="25.0" prefWidth="122.0" style="-fx-border-radius: 10;" stylesheets="@../styling/fullpackstyling.css" text="Combo" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3">
                <GridPane.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets bottom="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
             <Label fx:id="lblHp3" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -175,14 +175,14 @@
             </HBox>
          </children>
       </HBox>
-      <Button fx:id="btnAddEnemy" maxWidth="-Infinity" mnemonicParsing="false" onAction="#addEnemy" style="-fx-border-radius: 10;" text="Add enemy monster" GridPane.columnIndex="3" GridPane.rowIndex="3">
+      <Button fx:id="btnAddEnemy" maxWidth="-Infinity" mnemonicParsing="false" onAction="#addEnemy" prefHeight="27.0" prefWidth="130.0" style="-fx-border-radius: 10;" text="Add enemy monster" GridPane.columnIndex="3" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets left="10.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#Logout" prefHeight="27.2" prefWidth="100.0" style="-fx-border-radius: 10;" text="Logout" GridPane.columnIndex="3" GridPane.rowIndex="3">
+      <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#Logout" prefHeight="28.0" prefWidth="130.0" style="-fx-border-radius: 10;" text="Logout" GridPane.columnIndex="3" GridPane.rowIndex="3">
          <GridPane.margin>
-            <Insets left="160.0" />
+            <Insets left="141.0" />
          </GridPane.margin>
       </Button>
    </children>
