--- a/TUBES_PBO2/src/View/sample.fxml
+++ b/TUBES_PBO2/src/View/sample.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="mainMonster" alignment="center" hgap="10" prefHeight="547.0" prefWidth="844.0" style="-fx-background-color: #569efc;" stylesheets="@../styling/fullpackstyling.css" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<GridPane fx:id="mainMonster" alignment="center" hgap="10" prefHeight="547.0" prefWidth="844.0" style="-fx-background-color: #569efc;" stylesheets="@../styling/fullpackstyling.css" vgap="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.MainController">
    <rowConstraints>
       <RowConstraints maxHeight="145.0" minHeight="10.0" prefHeight="44.0" vgrow="ALWAYS" />
       <RowConstraints maxHeight="292.0" minHeight="10.0" prefHeight="186.0" vgrow="ALWAYS" />
@@ -95,7 +95,7 @@
             </Button>
             <Label fx:id="lblHp1" prefHeight="18.0" prefWidth="39.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="comboMonster1" onAction="#cmbMonster1" prefWidth="110.0" style="-fx-background-color: #e1e9f5;" GridPane.columnIndex="1" />
-            <Button maxWidth="225.0" mnemonicParsing="false" onAction="#fightAction1" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2">
+            <Button fx:id="basic1" maxWidth="225.0" mnemonicParsing="false" onAction="#fightAction1" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="2.0" right="2.0" />
                </GridPane.margin>
@@ -145,7 +145,7 @@
             </Button>
             <Label fx:id="lblHp2" prefHeight="18.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="comboMonster2" onAction="#cmbMonster2" prefWidth="110.0" style="-fx-background-color: #e1e9f5;" GridPane.columnIndex="1" />
-            <Button maxWidth="225.0" mnemonicParsing="false" onAction="#fightAction2" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2">
+            <Button fx:id="basic2" maxWidth="225.0" mnemonicParsing="false" onAction="#fightAction2" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="2.0" right="2.0" />
                </GridPane.margin>
@@ -195,7 +195,7 @@
             </Button>
             <Label fx:id="lblHp3" prefHeight="18.0" prefWidth="32.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="comboMonster3" onAction="#cmbMonster3" prefWidth="110.0" style="-fx-background-color: #e1e9f5;" GridPane.columnIndex="1" />
-            <Button maxWidth="225.0" mnemonicParsing="false" onAction="#fightAction3" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2">
+            <Button fx:id="basic3" maxWidth="225.0" mnemonicParsing="false" onAction="#fightAction3" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" stylesheets="@../styling/fullpackstyling.css" text="Basic Attack" GridPane.columnSpan="2" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="2.0" right="2.0" />
                </GridPane.margin>
