--- a/TUBES_PBO2/src/View/sample.fxml
+++ b/TUBES_PBO2/src/View/sample.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="mainMonster" alignment="center" hgap="10" prefHeight="547.0" prefWidth="844.0" style="-fx-background-color: #569efc;" stylesheets="@../styling/fullpackstyling.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<GridPane fx:id="mainMonster" alignment="center" hgap="10" prefHeight="547.0" prefWidth="844.0" style="-fx-background-color: #569efc;" stylesheets="@../styling/fullpackstyling.css" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <rowConstraints>
       <RowConstraints maxHeight="145.0" minHeight="10.0" prefHeight="44.0" vgrow="ALWAYS" />
       <RowConstraints maxHeight="292.0" minHeight="10.0" prefHeight="186.0" vgrow="ALWAYS" />
@@ -223,7 +223,7 @@
             </HBox>
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" spacing="76.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="3">
+      <HBox prefHeight="100.0" prefWidth="200.0" spacing="25.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="3">
          <children>
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addNewMonster" prefHeight="29.0" prefWidth="149.0" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" stylesheets="@../styling/fullpackstyling.css" text="Add New Monster">
                <font>
@@ -241,6 +241,11 @@
                </font>
             </Button>
             <Button fx:id="btnLogout" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#Logout" prefHeight="29.0" prefWidth="149.0" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" text="Logout">
+               <font>
+                  <Font name="System Bold Italic" size="13.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnHistory" alignment="CENTER" contentDisplay="RIGHT" layoutX="685.0" layoutY="10.0" mnemonicParsing="false" onAction="#openHistory" prefHeight="29.0" prefWidth="134.0" style="-fx-border-radius: 5px; -fx-background-color: #e1e9f5;" text="History">
                <font>
                   <Font name="System Bold Italic" size="13.0" />
                </font>
