--- a/TUBES_PBO2/src/View/showHistory.fxml
+++ b/TUBES_PBO2/src/View/showHistory.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane fx:controller="controllers.HistoryController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HistoryController">
    <children>
-      <TableView fx:id="HistoryTable" layoutX="-1.0" layoutY="1.0" prefHeight="400.0" prefWidth="600.0">
+      <TableView fx:id="HistoryTable" layoutX="-1.0" layoutY="1.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to bottom left, #0093E9 0%, #80D0C7 100%);">
         <columns>
           <TableColumn fx:id="userCol" prefWidth="75.0" text="User" />
           <TableColumn fx:id="winLoseCol" prefWidth="75.0" text="WinLose" />
